# Collaborative-Pushing-Grasping

./: .gitattributes  README.md
myur_ws/src/dh_hand_driver/: CMakeLists.txt  README.md  package.xml
myur_ws/src/dh_hand_driver/action/: ActuateHand.action
myur_ws/src/dh_hand_driver/doc/: ╝─┤ц╞ў┴╨▒э - ╙├╗з.xlsx  ╝─┤ц╞ў┴╨▒э -╚¤╓╕.xlsx
myur_ws/src/dh_hand_driver/include/dh_hand_driver/: DH_datastream.cpp  DH_datastream.h  definition.h  hand_controller.cpp  hand_controller.h  hand_driver.cpp  hand_driver.h
myur_ws/src/dh_hand_driver/launch/: dh_hand_controller.launch
myur_ws/src/dh_hand_driver/msg/: Pos_state.msg
myur_ws/src/dh_hand_driver/scripts/: DH_hand.rules  create_udev_rules.sh  delete_udev_rules.sh
myur_ws/src/dh_hand_driver/src/: node.cpp  test_client.cpp
myur_ws/src/dh_hand_driver/srv/: hand_state.srv
myur_ws/src/drl_push_grasp/: CMakeLists.txt  densenet.txt  package.xml  vgg16.txt
myur_ws/src/drl_push_grasp/scripts/: calibrate_myrobot.py  logger.py  main.py  multi_model.py  plot.py  plot_ablation_grasp.py  plot_ablation_push.py  trainer.py  ur_robotiq.py  utils.py
myur_ws/src/drl_push_grasp/scripts/models_paramters/: camera_params.json  camera_params_simulation.json
myur_ws/src/drl_push_grasp/scripts/real/: camera.py  camera_depth_scale.txt  camera_intrinsics.txt  camera_pose.txt
myur_ws/src/drl_push_grasp/scripts/realsense/: CMakeCache.txt  Makefile  cmake_install.cmake  realsense  realsense.cpp
myur_ws/src/drl_push_grasp/scripts/reward_net/: data_augment.py  evaluation.py  model.py  myrewards.py  plot_loss.py  train.py  util.py
myur_ws/src/robotiq_85_gripper/: LICENSE
myur_ws/src/robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85.urdf  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.backup.xacro  robotiq_85_gripper.urdf.xacro
myur_ws/src/robotiq_85_gripper/robotiq_85_driver/: CMakeLists.txt
myur_ws/src/robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: gripper_io.py  modbus_crc.py  robotiq_85_driver.py  robotiq_85_gripper_test.py
myur_ws/src/robotiq_85_gripper/robotiq_85_moveit_config/launch/: moveit.rviz
myur_ws/src/universal_robot-kinetic-devel/ur_description/urdf/: MYROBOT_NAME.urdf  common.gazebo.xacro  ur10_joint_limited_robot.urdf.real224.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_sim.urdf.xacro  ur3.urdf.xacro  ur3_robot.urdf
myur_ws/src/ur_modern_driver/: test_move.py
myur_ws/src/ur_modern_driver/launch/: ur10_bringup.launch
myur_ws/src/ur_modern_driver/src/: ur_hardware_interface.cpp
myur_ws/src/ur_robotiq/ur_robotiq_description/urdf/: gzplugin_grasp_fix.urdf.xacro  ur_robotiq.urdf  (+1 more)
myur_ws/src/ur_robotiq/ur_robotiq_moveit_config/: .setup_assistant
(+254 files in other folders)
